--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ h3{
 
 .information{
     font-weight: 400;
-    size: 20px;
+    font-size: 20px;
     line-height: 34px;
     color: #9893A3;
     margin: 30px auto;
@@ -149,7 +149,7 @@ h3{
     margin-top: 30px;
     gap: 14px;
     font-weight: 400px;
-    size: 18px;
+    font-size: 18px;
     color:#717082 ;
     line-height: 26px;
 
