--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
     font-family: 'Open Sans', sans-serif;
     color: #9893A3;
     display: flex;
+    font-size: 16px;
     gap: 25px;
     list-style: none;
     text-decoration: none;
