--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+.background_color{
+    background-color: #F2F2F2;
+}
+
 .container{
     width: 1180px;
     margin: 0 auto;
